--- a/ccs/performance.tex
+++ b/ccs/performance.tex
@@ -11,7 +11,7 @@ rates and the number of shared keys can help determine the optimal number of sha
 When implementing \system{}, we used SHA-256 for the HMAC implementation and AES-128 for symmetric key cryptographic operations.  We used the {\tt cryptography} library and implemented 
 all cryptographic operations in Python.  
 
-\begin{figure}[t]
+\begin{figure}[h!]
 \centering
 \includegraphics[width=.5\textwidth]{perf_setup}
 \caption{Our experimental setup used to evaluate the performance overhead of \system{}.}
@@ -78,7 +78,7 @@ simulation, we would have to know a priori knowledge of exactly what objects (th
 full web page, we would then have to obfuscate these objects and store them at a cache node.  Due to these challenges, we measure 
 object downloads, which additively should be representative of full page download times. \\
 
-\begin{figure}[t]
+\begin{figure}[b]
 \centering
 \includegraphics[width=.45\textwidth]{transfer_new.png}
 \caption{The total transfer time for accessing different sizes of objects using \system{} and without \system{}'s cryptographic operations.}
@@ -117,7 +117,7 @@ Our results from this experiment are shown in Figure \ref{fig:cache_hits}.  We c
 as the number of shared keys increase.  Interestingly, for larger numbers of $k$ the difference between $k-1$ keys and $k$ is less than for larger 
 values of $k$; therefore, for larger values of $k$ there is greater security with a relatively low performance trade off.
 
-\begin{figure}[t]
+\begin{figure}[b]
 \centering
 \includegraphics[width=.45\textwidth]{cache_hit_rate.png}
 \caption{The cache hit rate for different numbers of shared keys.}
