--- a/ccs/background.tex
+++ b/ccs/background.tex
@@ -26,7 +26,7 @@ server, thus increasing the speed in which the client receives the content. If t
 not in one of the CDN's caches, then the request is forwarded to the content publisher's server, the CDN 
 caches the response, and returns the content to the client. 
 
-\begin{figure}[h]
+\begin{figure}[t]
 \centering
 \includegraphics[width=.5\textwidth]{background_cdn}
 \caption{The relationships between clients, the CDN, and content publishers in 
