--- a/ccs/design.tex
+++ b/ccs/design.tex
@@ -45,7 +45,7 @@ many questions: are anonymizing proxies/VPNs trustworthy?, should clients be tru
 can any jurisdiction still subpoena the CDN for information (presumably the CDN has locations in many 
 countries and clients in many countries)?
 
-\begin{figure*}[h!]
+\begin{figure*}[t!]
 \centering
 \includegraphics[width=.9\textwidth]{full_ocd_system}
 \caption{The relationships between clients, the CDN, proxies, and content publishers in 
@@ -63,7 +63,7 @@ clients are accessing any content distributed by the CDN), this
 system should complement the legal framework; it should make clear which jurisdictions are allowed 
 which information, and also prevent an overreaching government from demanding data.  This 
 can be addressed by introducing a closed system of proxies, where a client uses a single proxy when requesting 
-content --- not only does this proxy provide a level of client anonymity, but also decides which jurisdiction 
+content---not only does this proxy provide a level of client anonymity, but also decides which jurisdiction 
 the data falls under.  
 
 \paragraph{Proxy in Client's Jurisdiction.} By replacing the use of an anonymizing proxy or VPN with the use 
