--- a/ccs/protocol.tex
+++ b/ccs/protocol.tex
@@ -127,10 +127,10 @@ added padding, to reconstruct the original content.\footnote{Proxies can cache c
 the system should still provide protections.  We have two different partial deployment plans, and both provide protections for those 
 publishers, CDNs, and clients that use \system{}. 
 
-\begin{figure*}[h!]
+\begin{figure*}[t!]
 \centering
 \includegraphics[width=.8\textwidth]{retrieving_content}
-\caption{Step-by-step instructions on how content is retrieved in \system{}.}
+\caption{Steps for retrieving content in \system{}.}
 \label{fig:retrieving}
 \end{figure*}
 
@@ -160,10 +160,10 @@ content publisher, we can utilize multiple CDNs.  The publisher can spread repli
 the encrypted replicas are on one CDN and the plaintext replicas are on a different CDN.  In this case the publisher 
 is not susceptible to flashcrowds correlations and can still join the system.
 
-\begin{figure}[b]
+\begin{figure}[t]
 \centering
 \includegraphics[width=.45\textwidth]{key_management}
-\caption{Step-by-step instructions on how to distribute keys to proxies.}
+\caption{Steps for distributing keys to proxies.}
 \label{fig:keys}
 \end{figure}
 
