--- a/ccs/intro.tex
+++ b/ccs/intro.tex
@@ -17,7 +17,7 @@ diverse regions, and users may not have purview over where their data is
 stored, or where their traffic goes. Another twist is that the CDNs themselves
 may become liable for the content that they are hosting. For example, the
 European Union has been considering laws that would remove safe harbor
-protection on copyright infringment for online service providers if they do
+protection on copyright infringement for online service providers if they do
 not deploy tools that can automatically inspect and remove infringing content.
 Both of these tussles are currently being addressed in the courts, yet the
 legal outcomes remain ambiguous and uncertain, sometimes with courts issuing
