adding copyright stuff

--- a/ccs/sigproc.bib
+++ b/ccs/sigproc.bib
@@ -321,3 +321,11 @@
   year={2014},
   organization={IEEE}
 }
+
+
+@article{eu-copyright,
+key = "eu-copyright",
+title = "{EU Proposal for a Directive of The European Parliament and of the Council on Copyright in the Digital Single Market}",
+year = 2016,
+note = "\url{https://ec.europa.eu/transparency/regdoc/rep/1/2016/EN/1-2016-593-EN-F1-1.PDF}"
+}
