--- a/ccs/background.tex
+++ b/ccs/background.tex
@@ -59,7 +59,12 @@ music labels~\cite{eff_cloudflare_trademark}.  Originally, the music labels went
 website, but later the order was extended to Cloudflare; the order ``required CloudFlare to block all of its customers 
 from using domain names that contained `grooveshark,' regardless of whether those domains contained First 
 Amendment-protected speech, or had any connection with the `New Grooveshark' defendants who were the 
-targets of the actual lawsuit.''  This case highlights the problem that CDNs face by knowing all the content 
+targets of the actual lawsuit.'' CDNs may also run the risk of running afoul of
+copyright law: for example, recent developments in the European Union propose to
+remove safe harbor protections for some CDNs if they do not employ automated detection
+techniques for removing copyrighted content~\cite{eu-copyright}.
+These cases highlight a key problem that CDNs face by knowing all
+the content
 that they distribute: it may burden them with the legal responsibility for the actions of their customers 
 and clients.
 
