minor typo fixes in abstact

--- a/ccs/abstract.tex
+++ b/ccs/abstract.tex
@@ -10,12 +10,12 @@ ambiguous outcomes thus far. This paper offers a technical contribution to
 this tussle. We first analyze the privacy  issues a CDN faces in the presence
 of a government (or insider) who would wish to access information about what
 data is being stored on the CDN and who is accessing it. To mitigate the
-resulting threats, we design and implement \system{}, a system provides {\em
+resulting threats, we design and implement \system{}, a system that provides {\em
 oblivious content distribution}, a property that allows CDNs to provide the
 performance benefits of content distribution and caching, while preventing the
-CDN from knowing what content that is stored on the CDN or who is accessing
+CDN from knowing what content is stored on the CDN or who is accessing
 it. These properties of \system{} provide protections for both the client, the
-content owner, and the CDN operator. We design a the protocol for publishing
+content owner, and the CDN operator. We design a protocol for publishing and 
 retrieving content using \system{} and, through a prototype implementation and
 evaluation, show that the performance overhead is negligible.
 \end{abstract}
