added relevant cases to foci paper

--- a/foci/intro.tex
+++ b/foci/intro.tex
@@ -46,7 +46,9 @@ they have at stake.  Alice may be punished for publishing content that is politi
 may be held liable for controversial information (or copyright infringements); the Internet users' 
 privacy could be leaked.  Each stakeholder should be interested (and possibly worried) about the 
 consequences of overreaching government access.  In fact, we have recently seen that Cloudflare, a popular 
-CDN, has been secretly required to hand over data to the FBI~\cite{cloudflare_gag}.
+CDN, has been secretly required to hand over data to the FBI~\cite{cloudflare_gag}.  Similarly, leaked 
+NSA documents showed that the government agency ``collected information `by exploiting inherent weaknesses 
+in Facebook's security model' through its use of the popular Akamai content delivery network''~\cite{}.
 
 In this work, we focus on the privacy implications of cross-border data flows and data 
 storage, and how technology can be designed to protect citizens' data, regardless of the 
