--- a/foci/paper.bib
+++ b/foci/paper.bib
@@ -11,6 +11,12 @@
   howpublished = {\url{https://blog.cloudflare.com/the-trouble-with-tor/}}
 }
 
+@misc{google_overseas,
+  title="{Google must turn over foreign-stored emails pursuant to a warrant, court rules}",
+  key="Google",
+  howpublished = {\url{https://www.washingtonpost.com/news/volokh-conspiracy/wp/2017/02/03/google-must-turn-over-foreign-stored-e-mails-pursuant-to-a-warrant-court-rules/?utm_term=.e73f546c25c0}}
+}
+
 @misc{uk_whatsapp,
   title = "{UK Targets WhatsApp Encryption After London Attack}",
   key = "UK",
@@ -304,6 +310,18 @@
   title = "{The Surprising Implications of the Microsoft/Ireland Warrant Case}",
   key = "Surprising",
   howpublished = {\url{https://www.washingtonpost.com/news/volokh-conspiracy/wp/2016/11/29/the-surprising-implications-of-the-microsoftireland-warrant-case/?utm_term=.789766364ba7}}
+}
+
+@misc{global_warrant,
+  title = "{Report of the Special Rapporteur on the right to privacy}",
+  key = "Report",
+  howpublished = {\url{http://www.ohchr.org/Documents/Issues/Privacy/A-HRC-31-64.doc}}
+}
+
+@misc{nsa_akamai,
+  title = "{How the NSA & FBI made Facebook the perfect mass surveillance tool}",
+  key = "How",
+  howpublished = {\url{https://venturebeat.com/2014/05/15/how-the-nsa-fbi-made-facebook-the-perfect-mass-surveillance-tool/}}
 }
 
 @misc{apple_fbi,
