--- a/foci/rest.tex
+++ b/foci/rest.tex
@@ -25,7 +25,9 @@ Many of these companies that have recieved NSLs under gag order have publicly pu
 
 Microsoft has taken a first step in protecting their customers' privacy from an overreaching government.  In 2015, Microsoft established a data center in Germany, which is shepherded by Deutsche Telekom (Germany's largest telecommunications provider), and Microsoft will only be given access to the data if either the customer or Deutsche Telekom's T-Systems subsidiary give permission~\cite{microsoft_germany}.  This is a first attempt at preventing U.S. authorities access to the data, and a leading example of how we can use and develop technology in other ways for this same purpose.
 
-Unfortunately, not all cases are on the side of privacy; in April 2017, New York's highest court ruled that Facebook is not allowed to ask an appellate court to reject a search warrant ordering them to hand over information from hundreds of accounts~\cite{facebook_ny}.  Facebook's argument was that the search warrants were so broad that they were essentially an unconstitutional search.  This blow to Facebook's attempt at expanding privacy protections for their users motivates the general need for systems that preserve the privacy of data at rest. Technology can prevent overreaching governments from accessing such broad amounts of data, and we hope that future systems build in privacy protections for this reason. 
+Unfortunately, not all cases are on the side of privacy; in April 2017, New York's highest court ruled that Facebook is not allowed to ask an appellate court to reject a search warrant ordering them to hand over information from hundreds of accounts~\cite{facebook_ny}.  Facebook's argument was that the search warrants were so broad that they were essentially an unconstitutional search.  This blow to Facebook's attempt at expanding privacy protections for their users motivates the general need for systems that preserve the privacy of data at rest.  Additionally, a recent second circuit court case ruled that Google must turn over emails stored overseas; this effectively has the {\it opposite} ruling as compared to the Microsoft vs. Ireland case, in which held that warrants for customer emails are unenforceable when stored on a server outside the United States~\cite{google_overseas,microsoft_ireland}. 
+
+The past few months have also seen a proposal for a United Nations Global warrant; this would allow the issuing of international surveillance warrants or international data access warrants (IDAWs) base on international law~\cite{global_warrant}.  Complementary, technology can prevent overreaching governments from accessing such broad amounts of data, and we hope that future systems build in privacy protections for this reason. 
 
 %[TODO: paragraph on historical case outcomes involving data at rest, reference Microsoft-Ireland Case~\cite{microsoft_ireland} and more recent ruling in Facebook v. New York \cite{facebook_ny}, and discuss what is currently being done, reference Microsoft-Germany data center~\cite{microsoft_germany}]
 
