--- a/foci/abstract.tex
+++ b/foci/abstract.tex
@@ -1,19 +1,20 @@
-\subsection*{Abstract}
-
-As the Internet continues to grow, it does so without national borders, 
-raising the question of how data should be governed, by whom, and 
-under what circumstances.  Different jurisdictions follow different policies 
-and regulations, particularly on the topic of data privacy.  For example, the Safe
-Harbor framework was developed to allow trans-Atlantic data flow while ensuring 
-the privacy of European Union citizens' data.  Along with determining the invalidity 
-of the framework, the courts are where most battles on data 
-privacy have been fought while technology development with jurisdictional 
-differences in mind has been left to the side. In this work, 
-we focus on the privacy implications of cross-border data flows and data 
-storage, and how technology can be designed to protect citizens' data, regardless 
-of the jurisdiction in which the client, data, or service resides.  We highlight 
-some of the historical court decisions, ongoing jurisdictional debates, and evaluate 
-some of the proposed systems and techniques in terms of how well they provide data protection 
-for either data at rest or data in motion.  Lastly, we explain and discuss how 
-technology can play a role in designing systems to facilitate data privacy in 
-the face of an overreaching government or conflicting jurisdictional policies.
+\begin{abstract} The Internet's growth expands across international borders,
+coupled with the growth of geo-replicated cloud-backed applications, has
+created situations where a user's data may be stored in many countries around
+the world. Typically, the location of a user's data has little correlation
+with the citizenship of that user, raising questions about the laws and
+policies that govern that user's data. Questions over access to user data may
+meet dissonance when the laws governing a citizen in one country are at odds
+with the laws governing a country where that user's data is stored.  For
+example, the Safe Harbor framework was developed to allow trans-Atlantic data
+flow while ensuring  the privacy of European Union citizens' data. This legal
+framework, and others, such as the Stored Communications Act in the United
+States, have created flashpoints for legal battles over privacy in the courts.
+In this paper, we argue that {\em technology} may be able to shape privacy
+debates concerning cross-border data flows and data storage, by helping to
+protect the privacy of citizens' data regardless of where the client, data, or
+online service resides. In this discussion, we highlight several historical
+court decisions and ongoing legal tussles in this area. We then suggest that some
+of the ongoing work in the security and privacy community may ultimately shape some
+of these debates by offering protections for both data in motion and data at rest.
+\end{abstract}
