--- a/foci/motion.tex
+++ b/foci/motion.tex
@@ -28,8 +28,6 @@ There are a number of ongoing debates surrounding the privacy of data in motion.
 \subsection{Technical Approaches}
 \label{sec:tech_motion}
 
-There has been some research on developing techniques, systems, and clean-slate Internet architectures to protect data in motion.  Table \ref{tab:current_systems} shows which proposed systems/techniques address which type of data.
-
 %\begin{table}[h]
 %\begin{center}
 %    \begin{tabular}{| l | l | l |}
@@ -49,7 +47,7 @@ There has been some research on developing techniques, systems, and clean-slate 
 %\end{center}
 %\end{table}
 
-Levin \ea, introduced Alibi Routing, which provides ``proofs of avoidance,'' which serves as evidence that a user's packets did not traverse a user-specified geographic region~\cite{levin2015alibi}.  This mechanism could be used to avoid (potentially with proof) a region or nation state known for surveillance.  Unfortunately, this mechanism is not very successful when trying to avoid a region that is geographically close to the client or server, and the client does not know until after the communication has occured whether or not the region was avoided.  Nevertheless, it was an initial work in country and region avoidance and paved the road for future work in routing for avoidance.  More recently, a system called RAN was introduced, which allows Internet users to avoid a user-specified country by using an overlay network~\cite{edmundson2017ran}.  This system uses traceroute measurements to determine the correct overlay network relay to use in order to avoid a country; unfortunately, these measurements cannot measure the reverse path from a server to a client, and thus provide no guarantee that the unfavorable country is not on the reverse path.
+There has been some research on developing techniques, systems, and clean-slate Internet architectures to protect data in motion.  Levin \ea, introduced Alibi Routing, which provides ``proofs of avoidance,'' which serves as evidence that a user's packets did not traverse a user-specified geographic region~\cite{levin2015alibi}.  This mechanism could be used to avoid (potentially with proof) a region or nation state known for surveillance.  Unfortunately, this mechanism is not very successful when trying to avoid a region that is geographically close to the client or server, and the client does not know until after the communication has occured whether or not the region was avoided.  Nevertheless, it was an initial work in country and region avoidance and paved the road for future work in routing for avoidance.  More recently, a system called RAN was introduced, which allows Internet users to avoid a user-specified country by using an overlay network~\cite{edmundson2017ran}.  This system uses traceroute measurements to determine the correct overlay network relay to use in order to avoid a country; unfortunately, these measurements cannot measure the reverse path from a server to a client, and thus provide no guarantee that the unfavorable country is not on the reverse path.
 
 There are a number of other censorship circumvention systems that use different techniques, one example is the Tor network.  Tor is a censorship circumvention system that employs a series of relays and layered encryption~\cite{dingledine2004tor}.  Tor does protect data in motion from surveillance, but is still susceptible to correlation attacks and fingerprinting attacks~\cite{sun2015raptor,shmatikov2006timing,feamster2004location,greschbach2016effect}.  Virtual Private Networks (VPNs) have also been used to circumvent censorship; a proposed system that uses VPNs is VPNGate~\cite{nobori2014vpn}.  While VPNs protect the data in motion on a portion of the path, it leaves the data susceptible to snooping on the other portion of the path.  Additionally, use of a VPN requires the client to place trust in the VPN provider, which a nation state could demand data from.   
 
