--- a/foci/paper.bib
+++ b/foci/paper.bib
@@ -319,7 +319,7 @@
 }
 
 @misc{nsa_akamai,
-  title = "{How the NSA & FBI made Facebook the perfect mass surveillance tool}",
+  title = "{How the NSA \& FBI made Facebook the perfect mass surveillance tool}",
   key = "How",
   howpublished = {\url{https://venturebeat.com/2014/05/15/how-the-nsa-fbi-made-facebook-the-perfect-mass-surveillance-tool/}}
 }
