a little more work on the last paragraph

--- a/foci/intro.tex
+++ b/foci/intro.tex
@@ -77,12 +77,12 @@ highlight various aspects where existing technology fails to provide adequate
 protection, and highlight new avenues for future work in this regard.
 
 We explore questions for two types of user data on the Internet: (1)~data in
-motion and (2)~data at rest.  We differentiate between these two types of data
-for a number of reasons.   First, there are different policies and regulations
-applicable to the two types of data.  Second,  they have different
-characteristics, which lead to different technological requirements to
-preserve  privacy from nation state surveillance, especially considering
-surveillance can be conducted via wiretapping or serving a subpoena.
+motion (\ie, data that is traversing the network in between a user and where
+it is stored) and (2)~data at rest (\ie, data that is stored on a server).
+Each scenario has different policies and regulations that are applicable to
+the two types of data.  Each type of data also has different characteristics,
+which in turn leads to different technological requirements to preserve
+privacy from nation state surveillance.
 
 The rest of the paper is organized as follows.  We discuss data in motion in
 more depth in Section \ref{sec:motion}, where we highlight  historical cases,
